--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/search.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/search.html
@@ -19,7 +19,6 @@
 	
 	<link href="../../../../services/v4/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-
 	<!-- jQuery -->
 	<script src="../../../../services/v4/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
@@ -49,7 +48,7 @@
 
 	<div>
 		<div class="form-horizontal">
-		  <div class="col-sm-12">
+		  <div class="col-sm-12" style="padding: 0">
 		    <div class="input-group">
 		      <div class="input-group-addon view-toolbar form-group">
 			      <select ng-model="workspace.selectedWorkspace" ng-options="o as o for o in workspace.workspaces" ng-change="workspace.workspaceSelected()"
