--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -47,7 +47,7 @@
 
 <body border="1px" ng-app="workspace" ng-controller="WorkspaceController as workspace">
 
-	<div>
+	<div class="view-fixed-top">
 	  <div class="btn-toolbar-top">
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
 			<div class="btn-group">
@@ -81,7 +81,9 @@
 	  </div>
 	</div>
 	
-	<div class="workspace"></div>
+	<div>
+		<div class="workspace"></div>
+	</div>
 	
 	<!-- Create Workspace -->
 	<div class="modal fade" id="dialogCreateWorkspace" tabindex="-1" role="dialog" aria-labelledby="dialogCreateWorkspaceLabel" aria-hidden="true">
