--- a/ide/ui/ide-repository/src/main/resources/ide-repository/repository.html
+++ b/ide/ui/ide-repository/src/main/resources/ide-repository/repository.html
@@ -44,7 +44,7 @@
 
 <body border="1px" ng-app="repository" ng-controller="RepositoryController as repository">
 
-	<div>
+	<div class="view-fixed-top">
 	  <div class="btn-toolbar-top">
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
 			<button type="button" class="btn btn-default btn-top" title="Export" ng-click="repository.exportRepository()"><i class="fa fa-download"></i></button>
@@ -53,7 +53,9 @@
 	  </div>
 	</div>
 	
-	<div class="repository"></div>
+	<div>
+	    <div class="repository"></div>
+        </div>
 
 </body>
 </html>
