table styling fixes

--- a/ide/ui/ide-data-structures/src/main/resources/ide-data-structures/data-structures.html
+++ b/ide/ui/ide-data-structures/src/main/resources/ide-data-structures/data-structures.html
@@ -37,27 +37,29 @@
 </head>
 
 <body ng-app="dataStructures" ng-controller="DataStructuresController as dataStructures" class="view">
-	<table class="table table-striped" ng-cloak>
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>Location</th>
-				<th>Handler</th>
-				<th width="50px">Type</th>
-				<th width="180px">Created</th>
-				<th width="150px">Creator</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="next in dataStructuresList">
-				<td>{{next.name}}</td>
-				<td>{{next.location}}</td>
-				<td>{{next.handler}}</td>
-				<td>{{next.type}}</td>
-				<td width="180px">{{next.createdAt}}</td>
-				<td width="150px">{{next.createdBy}}</td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="tableFixHead">
+		<table class="table table-striped" ng-cloak>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Location</th>
+					<th>Handler</th>
+					<th width="50px">Type</th>
+					<th width="180px">Created</th>
+					<th width="150px">Creator</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="next in dataStructuresList">
+					<td><div class="tdSingleLine">{{next.name}}</div></td>
+					<td><div class="tdSingleLine">{{next.location}}</div></td>
+					<td><div class="tdSingleLine">{{next.handler}}</div></td>
+					<td><div class="tdSingleLine">{{next.type}}</div></td>
+					<td width="180px"><div class="tdSingleLine">{{next.createdAt}}</div></td>
+					<td width="150px"><div class="tdSingleLine">{{next.createdBy}}</div></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
