fix styling of preview and logs in dark mode

--- a/ide/ui/ide-logs/src/main/resources/ide-logs/logs.html
+++ b/ide/ui/ide-logs/src/main/resources/ide-logs/logs.html
@@ -48,7 +48,7 @@
 			</div>
 		  </div>
 		</div>
-		<pre class="form-control col-lg-12" style="height: 100%;">{{ logContent }}</pre>
+		<pre class="form-control col-lg-12 logs-area">{{ logContent }}</pre>
 
 </body>
 </html>
