--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
@@ -388,12 +388,15 @@
 						diagnosticCodesToIgnore: [
 							2304, // Cannot find name 'exports'.(2304)
 							2683, // 'this' implicitly has type 'any' because it does not have a type annotation.(2683)
+							7005, // Variable 'ctx' implicitly has an 'any' type.(7005)
 							7006, // Parameter 'ctx' implicitly has an 'any' type.(7006),
-							7009 // 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.(7009)
+							7009, // 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.(7009)
+							7034  // Variable 'ctx' implicitly has type 'any' in some locations where its type cannot be determined.(7034)
+
 						]
 					});
 					monaco.languages.typescript.javascriptDefaults.setCompilerOptions({
-						target: monaco.languages.typescript.ScriptTarget.ES6,
+						target: monaco.languages.typescript.ScriptTarget.ES2020,
 						strict: true,
 						strictNullChecks: true,
 						strictPropertyInitialization: true,
@@ -404,7 +407,7 @@
 						noUnusedParameters: true,
 						noUnusedLocals: true,
 						checkJs: true,
-						noFallthroughCasesInSwitch: true,
+						noFallthroughCasesInSwitch: true
 					});
 					monaco.editor.setTheme(monacoTheme);
 				});	
