checkout branch support

--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -73,7 +73,7 @@
 
 			<button type="button" class="btn btn-default btn-top" title="Create Workspace" ng-click="workspace.createWorkspace()"><i class="fa fa-clone"></i></button>
 			<button type="button" class="btn btn-default btn-top" title="Create Project" ng-click="workspace.createProject()"><i class="fa fa-pencil-square-o"></i></button>
-			<button type="button" class="btn btn-default btn-top" title="Link Project" ng-click="workspace.linkProject()"><i class="fa fa-external-link"></i></button>
+			<button type="button" class="btn btn-default btn-top" title="Link Project" ng-click="workspace.linkProject()"><i class="fa fa-link"></i></button>
 
 			<button type="button" class="btn btn-default btn-top" title="Save All" ng-click="workspace.saveAll()"><i class="fa fa-floppy-o"></i></button>
 			<button type="button" class="btn btn-default btn-top" title="Publish All" ng-click="workspace.publish()"><i class="fa fa-cloud-upload"></i></button>
