--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -61,6 +61,7 @@
 			<button id="push" type="button" class="btn btn-default" ng-show="false" title="Push Project" data-toggle="modal" data-target="#dialogPush"><i class="fa fa-upload"></i></button>
 			<button id="reset" type="button" class="btn btn-default" ng-show="false" title="Reset Project" data-toggle="modal" data-target="#dialogReset"><i class="fa fa-recycle"></i></button>
 			<button id="share" type="button" class="btn btn-default" ng-show="false" title="Share Project" data-toggle="modal" data-target="#dialogShare"><i class="fa fa-share"></i></button>
+			<button id="checkout" type="button" class="btn btn-default" ng-show="false" title="Checkout Branch" data-toggle="modal" data-target="#dialogCheckout"><i class="fa fa-check-circle-o"></i></button>
 			
 			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="workspace.refresh()"><i class="fa fa-refresh"></i></button>
 			
@@ -351,6 +352,40 @@
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okShare()" data-toggle="modal" data-target="#dialogShare">Share</button>
+	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    </div>
+	</div>
+
+	<!-- Checkout -->
+	<div class="modal fade" id="dialogCheckout" tabindex="-1" role="dialog" aria-labelledby="dialogCheckoutLabel" aria-hidden="true">
+	    <div class="modal-header">
+	        <h4>Checkout Branch</h4>
+	    </div>
+	    <div class="modal-body">
+	        <div class="form-group row">
+				<label class="col-xs-12 col-form-label">Do you want to checkout the selected Branch from Git?</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Username</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.username" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Password</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
+				</div>
+			</div>
+			<!-- <div class="form-group row">
+				<label class="col-xs-3 col-form-label">Branch</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.selectedBranch" required="required">
+				</div>
+			</div> -->
+	    </div>
+	    <div class="modal-footer">
+	      <button class="btn btn-primary" ng-click="workspace.okCheckout()" data-toggle="modal" data-target="#dialogCheckout">Checkout</button>
 	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
 	    </div>
 	</div>
