Fixed: #538 - Add Commit Command

--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/import.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/import.html
@@ -56,7 +56,7 @@
 			<div class="col-lg-12">
 		    	<label class="page-header">Import to Workspace</label>
 		    	<select ng-model="selectedWs" ng-options="o as o for o in workspaces"
-					class="dropdown btn btn-default dropdown-toggle" title="Workspaces"></select>
+					class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Workspaces"></select>
 			</div>
 		 </div>
          <div class="row">
