--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -62,6 +62,7 @@
 			<button id="reset" type="button" class="btn btn-default" ng-show="false" title="Reset Project" data-toggle="modal" data-target="#dialogReset"><i class="fa fa-recycle"></i></button>
 			<button id="share" type="button" class="btn btn-default" ng-show="false" title="Share Project" data-toggle="modal" data-target="#dialogShare"><i class="fa fa-share"></i></button>
 			<button id="checkout" type="button" class="btn btn-default" ng-show="false" title="Checkout Branch" data-toggle="modal" data-target="#dialogCheckout"><i class="fa fa-check-circle-o"></i></button>
+			<button id="commit" type="button" class="btn btn-default" ng-show="false" title="Commit Project" data-toggle="modal" data-target="#dialogCommit"><i class="fa fa-arrow-circle-o-down"></i></button>
 			
 			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="workspace.refresh()"><i class="fa fa-refresh"></i></button>
 			
@@ -137,12 +138,12 @@
 					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
 				</div>
 			</div>
-			<div class="form-group row">
+			<!-- <div class="form-group row">
 				<label class="col-xs-3 col-form-label">Branch</label>
 				<div class="col-xs-5">
 					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
 				</div>
-			</div>
+			</div> -->
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okPullAll()" data-toggle="modal" data-target="#dialogPullAll">Pull All</button>
@@ -171,12 +172,12 @@
 					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
 				</div>
 			</div>
-			<div class="form-group row">
+			<!-- <div class="form-group row">
 				<label class="col-xs-3 col-form-label">Branch</label>
 				<div class="col-xs-5">
 					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
 				</div>
-			</div>
+			</div> -->
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okPull()" data-toggle="modal" data-target="#dialogPull">Pull</button>
@@ -257,12 +258,12 @@
 					<input class="form-control" type="text" placeholder="" ng-model="workspace.email" required="required">
 				</div>
 			</div>
-			<div class="form-group row">
+			<!-- <div class="form-group row">
 				<label class="col-xs-3 col-form-label">Branch</label>
 				<div class="col-xs-5">
 					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
 				</div>
-			</div>
+			</div> -->
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okPush()" data-toggle="modal" data-target="#dialogPush">Push</button>
@@ -390,6 +391,52 @@
 	    </div>
 	</div>
 	
+
+	<!-- Commit -->
+	<div class="modal fade" id="dialogCommit" tabindex="-1" role="dialog" aria-labelledby="dialogCommitLabel" aria-hidden="true">
+	    <div class="modal-header">
+	        <h4>Commit Changes in Project</h4>
+	    </div>
+	    <div class="modal-body">
+	        <div class="form-group row">
+				<label class="col-xs-12 col-form-label">Do you want to Commit the changes of the selected Project?</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Message</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="text" placeholder="Commit message" ng-model="workspace.commitMessage" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Username</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.username" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Password</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">e-mail</label>
+				<div class="col-xs-6">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.email" required="required">
+				</div>
+			</div>
+			<!-- <div class="form-group row">
+				<label class="col-xs-3 col-form-label">Branch</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
+				</div>
+			</div> -->
+	    </div>
+	    <div class="modal-footer">
+	      <button class="btn btn-primary" ng-click="workspace.okCommit()" data-toggle="modal" data-target="#dialogCommit">Commit</button>
+	      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    </div>
+	</div>
 	
 	
 </body>
