--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -71,7 +71,7 @@
 			<button type="button" id="uploadFile" ng-show=false data-toggle="modal" data-target="#dialogUploadFile"></button>
 			
 
-			<button type="button" class="btn btn-default btn-top" title="Create Workspace" ng-click="workspace.createWorkspace()"><i class="fa fa-clone"></i></button>
+			<button type="button" class="btn btn-default btn-top" title="Create Workspace" ng-click="workspace.createWorkspace()"><i class="fa fa-plus"></i></button>
 			<button type="button" class="btn btn-default btn-top" title="Create Project" ng-click="workspace.createProject()"><i class="fa fa-pencil-square-o"></i></button>
 			<button type="button" class="btn btn-default btn-top" title="Link Project" ng-click="workspace.linkProject()"><i class="fa fa-link"></i></button>
 
