--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
@@ -95,6 +95,12 @@
 						extension: ".bpmn",
 						type: "xml"
 					}, {
+						extension: ".model",
+						type: "json"
+					}, {
+						extension: ".edm",
+						type: "xml"
+					}, {
 						extension: ".xsjs",
 						type: "javascript"
 					}];
