--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/diff.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/diff.html
@@ -197,8 +197,10 @@
                             modified: modifiedModel
                         });
                     });
+                monaco.editor.setTheme(monacoTheme);
             })
         })();
+        
 
 	</script>
 </body>
