--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
@@ -101,6 +101,9 @@
 						extension: ".edm",
 						type: "xml"
 					}, {
+						extension: ".schema",
+						type: "json"
+					}, {
 						extension: ".xsjs",
 						type: "javascript"
 					}];
